# ragapp

./: .env.example  README.md  api.py  build_macos.sh  kill_processes.sh  launch_gui.py  pyproject.toml  ragapp.spec  streamlit_app.py  test_ollama_integration.py
.github/: markdown-link-check-config.json
.github/workflows/: build-macos.yml  ci.yml  docs.yml  release.yml
data/documents/: sample_getting_started.md  sample_introduction.txt  sample_technical_details.txt
docs/: API.md  ARCHITECTURE.md  BUILDING.md  OLLAMA_SETUP.md  TROUBLESHOOTING.md
examples/: basic_usage.py  programmatic_usage.py
src/ragapp/: __init__.py  __main__.py  config.py  pipeline.py
src/ragapp/generation/: __init__.py  generator.py  prompts.py
src/ragapp/ingestion/: __init__.py  loaders.py  processor.py
src/ragapp/retrieval/: __init__.py  retriever.py  vector_store.py
static/: index.html
tests/: __init__.py  test_config.py  test_ingestion.py  test_pipeline.py
